# Multisim-MCP

./: .gitignore  LICENSE  README.md  _inspect_tlb.py  _test_com.py  multisim_mcp_prd_v_0_1.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
scripts/: inspect_multisim_tlb.py  probe_multisim_com.py
sim/: dc_sweep.cmd  inv_amp.cir  inv_amp_dc.cir
src/multisim_mcp/: __init__.py  com_adapter.py  models.py  server.py  session.py
src/multisim_mcp/tools/: __init__.py  block_sim.py  circuit_templates.py  component_catalog.py  design_checks.py  enum_tools.py  file_tools.py  instrument_tools.py  markdown_report.py  modify_tools.py  netlist_builder.py  output_tools.py  report_tools.py  schematic_render.py  signal_measure.py  simulation_tools.py  spice_tools.py  transient_sweep.py
tests/: test_core_tools.py
